--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "overlay": "^1.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "^1.1.5",
     "routes": "^2.1.0",
+    "styled-components": "^6.0.0-rc.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
