--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "overlay": "^1.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-overlays": "^5.2.1",
     "react-router-dom": "^6.13.0",
     "react-scripts": "^1.1.5",
     "routes": "^2.1.0",
