--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "js-sha256": "^0.9.0",
     "overlay": "^1.2.5",
     "react": "^18.2.0",
+    "react-components": "^0.5.1",
     "react-dom": "^18.2.0",
     "react-overlays": "^5.2.1",
     "react-router-dom": "^6.13.0",
