--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "export-from-json": "^1.7.3",
     "js-sha256": "^0.9.0",
     "overlay": "^1.2.5",
     "react": "^18.2.0",
